--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-native": "0.69.6",
+    "react-native-elements": "^3.4.2",
+    "react-native-pager-view": "5.4.24",
+    "react-native-paper": "^4.12.5",
+    "react-native-tab-view": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
